plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.asdf'
version = '0.0.1-dev'
description = 'Minilog JPA with Authentication'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // swagger ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'

    // spring data jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // mysql jdbc
    implementation 'mysql:mysql-connector-java:8.0.32'

    // Spring Security, JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // testcontainers for junit 5
    testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
    testImplementation 'org.testcontainers:testcontainers:1.20.1'
    testImplementation 'org.testcontainers:mysql:1.20.1'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Spring Security Test
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT Test
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

tasks.named('test') {
    useJUnitPlatform()

    //test logging
    testLogging {
        events "passed", "skipped", "failed"
        outputs.upToDateWhen { false }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }
}

spotless {
    java {
        googleJavaFormat('1.22.0').reflowLongStrings()
    }
}

build.dependsOn 'spotlessApply'
